added max length to fetch notes
